# protoruf

./: .gitignore  CHANGELOG.md  Cargo.toml  PYPI_DEPLOY.md  PYPI_README.md  README.md  build.rs  mkdocs.yml  package-lock.json  package.json  post.md  pyproject.toml  vitest.config.ts
.github/workflows/: docs.yml  npm-test.yml  publish-pypi.yml  python-test.yml  release.yml  rust-test.yml
benches/: README.md  conversion.rs
dev-docs/: c-cpp.md  java.md  javascript-typescript.md  npm-build.md
doc/: MIGRATION_PYTHON_314.md  index.md  python.md  rust.md  setup.md
docs/: index.md
docs/api/: reference.md
docs/browser/: advanced.md  api.md  basic-usage.md  installation.md  proto-files.md  quick-start.md
docs/development/: contributing.md
docs/getting-started/: installation.md  quick-start.md
docs/guide/: advanced.md  basic-usage.md  proto-files.md
docs/node/: advanced.md  api.md  basic-usage.md  installation.md  proto-files.md  quick-start.md
docs/rust/: advanced.md  api.md  basic-usage.md  overview.md  proto-files.md  quick-start.md
examples/: 01_basic_user_example.py  02_ecommerce_example.py  03_iot_sensors_example.py  04_pydantic_integration.py  05_descriptor_cache.py  README.md  ecommerce.proto  iot_sensors.proto  user_service.proto
examples/js/: README.md  browser-example.html  node-example.ts  wasm-example.ts
npm/node/: README.md
npm/wasm/: README.md
python/protoruf/: __init__.py  _protoruf.pyi  compiler.py
scripts/: pack-github.mjs  prepare-npm-wasm.mjs
src/: core.rs  descriptor_resolver.rs  lib.rs  node.rs  pool_cache.rs  python.rs  wasm.rs
tests/: README.md  __init__.py  benchmark.py  benchmark_hot_loop.py  test_descriptor_cache.py  test_models.py  test_rust_json_probuff.py  test_source_proto.py
tests/benchmark/node/: README.md  benchmark.mjs  benchmark_hot_loop.mjs  benchmark_large.mjs  benchmark_large_hot_loop.mjs  common.mjs
tests/benchmark/python/: README.md  benchmark.py  benchmark_hot_loop.py  benchmark_large.py  benchmark_large_hot_loop.py  benchmark_utils.py
tests/benchmark/python/proto/: large.proto
tests/benchmark/wasm/: README.md  benchmark.mjs  benchmark_hot_loop.mjs  benchmark_large.mjs  benchmark_large_hot_loop.mjs  common.mjs
tests/js/: conversion.shared.ts  node.test.ts  parity.test.ts  wasm.test.ts
tests/proto/: message.desc  message.proto
