[package]
name = "protoruf"
version = "0.1.4"
edition = "2024"

[lib]
name = "protoruf"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
parking_lot = "0.12"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost-reflect = { version = "0.14", features = ["serde"] }
prost-build = "0.13"
protox = "0.7"

[features]
extension-module = ["pyo3/extension-module"]

[profile.release]
lto = true
codegen-units = 1
