[package]
name = "protoruf"
version = "0.1.5"
edition = "2024"

[lib]
name = "protoruf"
crate-type = ["cdylib", "rlib"]

[dependencies]
parking_lot = "0.12"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost-reflect = { version = "0.14", features = ["serde"] }
protox = "0.7"
lru = "0.12"

# --- Binding-specific dependencies (each gated behind its own feature) ---
# pyo3 is now OPTIONAL: it is only compiled when the `python` feature is on
# (maturin enables it). This lets the `node`/`wasm` builds avoid pulling PyO3,
# whose `extension-module` setting is incompatible with non-Python linking.
pyo3 = { version = "0.28", optional = true }

# Node.js native addon (napi-rs) — enabled by the `node` feature.
napi = { version = "2", optional = true, features = ["napi8"] }
napi-derive = { version = "2", optional = true }

# WebAssembly / browser (wasm-bindgen) — enabled by the `wasm` feature.
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[features]
default = []
# Build the Python extension module. Used by maturin (`--features python`).
# Keeps the exact same PyO3 `extension-module` behaviour as before.
python = ["dep:pyo3", "pyo3/extension-module"]
# Build the Node.js native addon. Used by `@napi-rs/cli`.
node = ["dep:napi", "dep:napi-derive"]
# Build the WebAssembly module. Used by `wasm-pack`.
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen"]

# napi-rs needs a small build-time setup to emit a loadable `.node` (symbol
# export on macOS/Windows). It is compiled for every build but only *runs* for
# the `node` feature (see build.rs), so Python/WASM/default builds are unaffected.
[build-dependencies]
napi-build = "2"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "conversion"
harness = false

[profile.release]
strip = "symbols"

# Heavy optimization (full LTO + a single codegen unit) is very expensive at
# compile time and would slow down every local rebuild (uv sync / maturin
# develop build in release by default). We keep it in an opt-in `dist` profile,
# used only to produce the published wheels: `maturin build --profile dist`.
[profile.dist]
inherits = "release"
lto = "fat"          # Global Link Time Optimization
codegen-units = 1    # Single-threaded compile for maximum LLVM optimizations
strip = true         # Strip debug symbols from the final binary (.so / .pyd)
# opt-level = 3 is inherited from `release` (already the default), no need to repeat it.
# Note: deliberately NOT setting `panic = "abort"` — it defeats PyO3's
# panic-to-exception handling, so a Rust panic would abort the whole Python
# process instead of raising a clean Python exception.