[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "protoruf"
version = "1.0.0"
description = "A Python library written in Rust for JSON/Protobuf conversion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "protobuf>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "protoruf._protoruf"

[tool.uv]
dev-dependencies = [
    "maturin>=1.0",
    "mypy>=1.19.1",
    "pytest>=8.0",
    "twine>=6.2.0",
]
