[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "protoruf"
version = "0.1.4"
description = "A Python library written in Rust for JSON/Protobuf conversion"
readme = "PYPI_README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4"
]

[project.urls]
Homepage = "https://github.com/EdwinAlkins/protoruf"
Documentation = "https://EdwinAlkins.github.io/protoruf/"
Repository = "https://github.com/EdwinAlkins/protoruf"
"Bug Tracker" = "https://github.com/EdwinAlkins/protoruf/issues"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "maturin>=1.14.0",
    "mypy>=2.1.0",
    "twine>=6.2.0",
]
benchmark = [
    "protobuf>=7.35.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "protoruf._protoruf"
